# synclyrics

./: .gitignore  README.md  pyproject.toml
aur-pkg/: .SRCINFO  PKGBUILD  synclyrics.desktop
synclyrics/: __init__.py  main.py
synclyrics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
synclyrics/lyrics/: __init__.py  fetcher.py  parser.py  romanizer.py
synclyrics/player/: __init__.py  monitor.py
synclyrics/ui/: lyrics_widget.py  main_window.py  milkdrop.html  milkdrop_widget.py  settings_dialog.py  theme.py  track_info_widget.py  visualizer_widget.py
